name:                pontarius-core
version:             0.0.0
synopsis:            pontarius core
description:         pontarius core
license:             BSD3
license-file:        LICENSE
author:              Philipp Balzarek
maintainer:          p.balzarek@googlemail.com
copyright:           2014 Philipp Balzarek
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Main
  build-depends:     base >= 4 && <5

executable pontarius-core
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5
